--- a/app/src/main/res/layout/fragment_home_page2.xml
+++ b/app/src/main/res/layout/fragment_home_page2.xml
@@ -70,11 +70,32 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/RecylerView"
-                    android:layout_width="397dp"
-                    android:layout_height="225dp" />
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/asian_salmon">
+
+                    </ImageView>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:text="SUMA SEDAP"
+                        android:textAlignment="center"
+                        android:textSize="25dp"
+                        android:textStyle="bold">
+
+                    </TextView>
+                </LinearLayout>
+
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
