--- a/app/src/main/res/layout/fragment_home_page2.xml
+++ b/app/src/main/res/layout/fragment_home_page2.xml
@@ -10,7 +10,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="637dp">
+        android:layout_height="621dp"
+        android:layout_above="@+id/coordinatorLayout"
+        android:layout_marginBottom="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -61,13 +63,30 @@
 
             </TextView>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/RecylerView"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="5dp">
+                android:orientation="vertical">
 
-            </androidx.recyclerview.widget.RecyclerView>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/asian_salmon">
+
+                </ImageView>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="SUMA SEDAP"
+                    android:textAlignment="center"
+                    android:textSize="25dp"
+                    android:textStyle="bold">
+
+                </TextView>
+            </LinearLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -239,26 +258,34 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
-                android:text="Quote of the day!"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:textStyle="bold">
+                android:layout_height="match_parent"
+                android:layout_margin="15dp"
+                android:background="@drawable/rectangular_lightgrey"
+                android:orientation="vertical">
 
-            </TextView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Quote of the day!"
+                    android:textColor="@color/white"
+                    android:textSize="20dp"
+                    android:textStyle="bold">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_marginLeft="15dp"
-                android:fontFamily="@font/poppins_semibold"
-                android:text="\'To ensure good health: eat lightly, breathe deeply, live moderately, cultivate cgeerfulness, and maintain an interest in life\' - William Londen"
-                android:textColor="@color/black"></TextView>
+                </TextView>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:textColor="@color/white"
+                    android:layout_marginLeft="15dp"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="\'To ensure good health: eat lightly, breathe deeply, live moderately, cultivate cgeerfulness, and maintain an interest in life\' - William Londen"></TextView>
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
@@ -266,7 +293,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="97dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:foregroundGravity="bottom">
