--- a/app/src/main/res/layout/fragment_register_page.xml
+++ b/app/src/main/res/layout/fragment_register_page.xml
@@ -9,12 +9,12 @@
 
     <TextView
         android:id="@+id/registerTitle"
-        android:layout_width="247dp"
+        android:layout_width="255dp"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="35dp"
-        android:layout_marginTop="191dp"
+        android:layout_marginTop="200dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="50dp"
         android:fontFamily="@font/poppins_semibold"
@@ -49,7 +49,7 @@
         android:layout_marginLeft="35dp"
         android:layout_marginTop="280dp"
         android:layout_marginRight="35dp"
-        android:background="@drawable/field"
+        android:background="@drawable/white_field"
         android:drawablePadding="20dp"
         android:hint="Username"
         android:minHeight="48dp"
@@ -83,7 +83,7 @@
         android:layout_marginLeft="35dp"
         android:layout_marginTop="375dp"
         android:layout_marginRight="35dp"
-        android:background="@drawable/field"
+        android:background="@drawable/white_field"
         android:drawablePadding="20dp"
         android:hint="Password"
         android:minHeight="48dp"
@@ -117,7 +117,7 @@
         android:layout_marginLeft="35dp"
         android:layout_marginTop="470dp"
         android:layout_marginRight="35dp"
-        android:background="@drawable/field"
+        android:background="@drawable/white_field"
         android:drawablePadding="20dp"
         android:hint="Email (example: user1456@gmail.com)"
         android:minHeight="48dp"
@@ -151,7 +151,7 @@
         android:layout_marginLeft="35dp"
         android:layout_marginTop="565dp"
         android:layout_marginRight="35dp"
-        android:background="@drawable/field"
+        android:background="@drawable/white_field"
         android:drawablePadding="20dp"
         android:hint="Confirm your email"
         android:minHeight="48dp"
