--- a/app/src/main/res/layout/fragment_admin_post_page.xml
+++ b/app/src/main/res/layout/fragment_admin_post_page.xml
@@ -3,28 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginStart="30dp"
+    android:layout_marginEnd="30dp"
+    android:layout_marginTop="20dp"
     tools:context=".adminPostPage">
 
-    <TextView
-        android:id="@+id/postTitle"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="149dp"
-        android:layout_marginTop="49dp"
-        android:layout_marginEnd="50dp"
-        android:textAlignment="center"
-        android:layout_marginBottom="50dp"
-        android:fontFamily="@font/poppins_semibold"
-        android:text="Post"
-        android:textSize="20dp"
-        android:textColor="@color/black"
-        />
 
-
-<!--    <de.hdodenhof.circleimageview.CircleImageView-->
+    <!--    <de.hdodenhof.circleimageview.CircleImageView-->
 <!--        android:id="@+id/profileImage"-->
 <!--        android:layout_width="96dp"-->
 <!--        android:layout_height="96dp"-->
@@ -37,99 +22,109 @@
 <!--        android:layout_marginTop="-25dp"-->
 <!--        />-->
 
-    <EditText
-        android:id="@+id/postTitleName"
-        android:layout_width="216dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/postTitle"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
-        android:hint="Title"
-        android:minHeight="48dp"
-        android:padding="10dp"
-        android:textColorHint="@color/black"
-        android:textSize="16sp" />
+        android:id="@+id/linearLayoutAdmin1"
+        android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/postDescription"
-        android:layout_width="374dp"
-        android:layout_height="101dp"
-        android:layout_below="@id/postTitleName"
-        android:layout_alignParentStart="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/rectangle"
-        android:fontFamily="@font/poppins_semibold"
-        android:hint="Post Description"
-        android:paddingLeft="20dp"
-        android:textSize="14dp" />
+        <Button
+            android:id="@+id/returnToAdminHomePageButton"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="30dp"
+            android:backgroundTint="@color/white"
+            android:drawableLeft="@drawable/ic_baseline_black_arrow_back_24"
+            android:fontFamily="@font/poppins_semibold"
+            android:textColor="@color/pastel_red"
+            android:textSize="14sp"
+            tools:ignore="SpeakableTextPresentCheck" />
 
-    <Button
-        android:id="@+id/publishPostButton"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/postTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="30dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="0dp"
+            android:layout_centerHorizontal="true"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="Post"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="20dp" />
+
+        <Button
+            android:id="@+id/publishPostButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_centerHorizontal="true"
+            android:backgroundTint="@color/pastel_red"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="Publish"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="265dp"
-        android:layout_marginTop="42dp"
-        android:layout_marginEnd="50dp"
-        android:backgroundTint="@color/pastel_red"
-        android:fontFamily="@font/poppins_semibold"
-        android:text="Publish"
-        android:textColor="@color/white"
-        android:textSize="14sp" />
+        android:layout_marginTop="40dp"
+        android:layout_below="@id/linearLayoutAdmin1"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/returnToProfilePageButton"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="42dp"
-        android:layout_marginEnd="50dp"
-        android:backgroundTint="@color/white"
-        android:drawableLeft="@drawable/ic_baseline_black_arrow_back_24"
-        android:fontFamily="@font/poppins_semibold"
-        android:textColor="@color/pastel_red"
-        android:textSize="14sp" />
+        <EditText
+            android:id="@+id/postTitleName"
+            android:layout_width="270dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:hint="Title"
+            android:fontFamily="@font/poppins_medium"
+            android:minHeight="48dp"
+            android:padding="10dp"
+            android:textColorHint="@color/black"
+            android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/uploadPicturesText"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/postDescription"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="-20dp"
-        android:layout_marginBottom="50dp"
-        android:fontFamily="@font/poppins_semibold"
-        android:text="Upload Pictures (optional)"
-        android:textColor="@color/black"
-        android:textSize="16dp"
-        />
+        <EditText
+            android:id="@+id/postDescription"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="50dp"
+            android:background="@drawable/rectangle"
+            android:fontFamily="@font/poppins_medium"
+            android:hint="Post Description"
+            android:paddingLeft="20dp"
+            android:textSize="14dp" />
 
-    <Button
-        android:id="@+id/choosePictureButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/uploadPicturesText"
-        android:layout_alignParentStart="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="-50dp"
-        android:layout_marginEnd="50dp"
-        android:backgroundTint="@color/white"
-        android:drawableEnd="@drawable/ic_baseline_pastelred_arrow_forward_ios_24"
-        android:fontFamily="@font/poppins_semibold"
-        android:text="Select"
-        android:textColor="@color/pastel_red"
-        android:textSize="14sp" />
+        <TextView
+            android:id="@+id/uploadPicturesText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="Upload Pictures (optional)"
+            android:textColor="@color/black"
+            android:textSize="16dp" />
+
+        <Button
+            android:id="@+id/choosePictureButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="50dp"
+            android:backgroundTint="@color/white"
+            android:drawableEnd="@drawable/ic_baseline_pastelred_arrow_forward_ios_24"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="Select"
+            android:textColor="@color/pastel_red"
+            android:textSize="14sp" />
+
+    </LinearLayout>
 
 </RelativeLayout>
