--- a/app/src/main/res/layout/fragment_profile_page.xml
+++ b/app/src/main/res/layout/fragment_profile_page.xml
@@ -130,8 +130,8 @@
 
     <TextView
         android:id="@+id/userBio"
-        android:layout_width="340dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@id/name"
         android:layout_alignParentStart="true"
         android:layout_marginStart="30dp"
@@ -148,7 +148,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/userBio"
         android:gravity="left"
-        android:layout_marginLeft="30dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="30dp"
         android:backgroundTint="@color/pastel_red"
         android:fontFamily="@font/poppins"
         android:text="ACHIEVEMENTS"
@@ -163,7 +164,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/userBio"
         android:gravity="left"
-        android:layout_marginLeft="200dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="30dp"
         android:backgroundTint="@color/pastel_red"
         android:fontFamily="@font/poppins"
         android:text="VIEW CALORIES"
@@ -189,7 +191,7 @@
 
 
     <LinearLayout
-        android:layout_width="353dp"
+        android:layout_width="match_parent"
         android:layout_height="132dp"
         android:layout_below="@id/currentWeightText"
         android:layout_marginLeft="30dp"
