--- a/app/src/main/res/layout/fragment_tuna_pasta_details_page.xml
+++ b/app/src/main/res/layout/fragment_tuna_pasta_details_page.xml
@@ -119,7 +119,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:layout_marginEnd="20dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"
                     android:orientation="vertical">
 
                     <TextView
