--- a/app/src/main/res/layout/fragment_social_feed_page.xml
+++ b/app/src/main/res/layout/fragment_social_feed_page.xml
@@ -51,14 +51,15 @@
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <Button
-        android:id="@+id/backToHomePageButton"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
+        android:id="@+id/backFeedToHomePageButton"
+        android:layout_width="116dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="292dp"
+        android:layout_marginTop="52dp"
         android:backgroundTint="@color/white"
-        android:drawableLeft="@drawable/ic_baseline_black_arrow_back_24"
+        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
         android:fontFamily="@font/poppins_semibold"
+        android:text="back"
         android:textColor="@color/pastel_red"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,19 +69,23 @@
         android:id="@+id/FeedTitleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="54dp"
+        android:layout_marginEnd="266dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="Feed"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toStartOf="@+id/backToHomePageButton"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/backToHomePageButton" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="UnknownId" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="426dp"
+        android:layout_height="242dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +94,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="230dp">
 
         </androidx.recyclerview.widget.RecyclerView>
 
