ui for change password page

--- a/app/src/main/res/layout/fragment_change_password_page.xml
+++ b/app/src/main/res/layout/fragment_change_password_page.xml
@@ -7,8 +7,7 @@
     android:layout_marginStart="30dp"
     android:layout_marginEnd="30dp"
     android:layout_marginBottom="40dp"
-    android:id="@+id/fragmentChgPass"
-    tools:context=".forgotPasswordPage">
+    tools:context=".changePasswordPage">
 
     <Button
         android:id="@+id/backToProfilePageButton"
@@ -23,36 +22,60 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/resetPasswordTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/changePasswordTitle"
+        android:layout_width="247dp"
+        android:layout_height="40dp"
         android:layout_below="@id/backToProfilePageButton"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
         android:textColor="@color/pastel_red"
-        android:text="Reset Password"
+        android:text="Change Password"
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/resetPasswordDesc"
-        android:layout_width="wrap_content"
+        android:id="@+id/changePasswordDesc"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/resetPasswordTitle"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp"
+        android:layout_below="@id/changePasswordTitle"
         android:fontFamily="@font/poppins"
         android:gravity="left"
         android:textColor="@color/black"
-        android:text="Enter a new password below to change your password."
+        android:text="Your new password must be different from your previous one."
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/passwordTitle"
-        android:layout_below="@id/resetPasswordDesc"
-        android:layout_width="247dp"
-        android:layout_height="40dp"
+        android:id="@+id/previousPasswordTitle"
+        android:layout_below="@id/changePasswordDesc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:gravity="left"
+        android:text="Previous Password"
+        android:textSize="16sp" />
+
+    <EditText
+        android:id="@+id/previousPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/previousPasswordTitle"
+        android:background="@drawable/white_field"
+        android:ems="10"
+        android:inputType="textPassword"
+        android:hint="Password"
+        android:textColorHint="@color/pastel_red"
+        android:drawablePadding="20dp"
+        android:minHeight="48dp"
+        android:padding="10dp"
+        android:fontFamily="@font/poppins"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/newPasswordTitle"
+        android:layout_below="@id/previousPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/poppins_semibold"
@@ -60,10 +83,23 @@
         android:text="New Password"
         android:textSize="16sp" />
 
-
+    <EditText
+        android:ems="10"
+        android:inputType="textPassword"
+        android:id="@+id/newPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/newPasswordTitle"
+        android:layout_alignParentStart="true"
+        android:hint="Password"
+        android:background="@drawable/white_field"
+        android:textColorHint="@color/pastel_red"
+        android:padding="10dp"
+        android:minHeight="48dp"
+        android:textSize="16sp"/>
 
     <TextView
-        android:id="@+id/newPasswordTitle"
+        android:id="@+id/reEnteredPasswordTitle"
         android:layout_below="@id/newPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -74,9 +110,23 @@
         android:text="Re-enter new password"
         android:textSize="16sp" />
 
+    <EditText
+        android:ems="10"
+        android:inputType="textPassword"
+        android:id="@+id/reEnteredPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/reEnteredPasswordTitle"
+        android:layout_alignParentStart="true"
+        android:hint="Password"
+        android:background="@drawable/white_field"
+        android:textColorHint="@color/pastel_red"
+        android:padding="10dp"
+        android:minHeight="48dp"
+        android:textSize="16sp"/>
 
     <Button
-        android:id="@+id/resetPasswordButton"
+        android:id="@+id/changePasswordButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/reEnteredPassword"
@@ -90,7 +140,7 @@
         />
 
     <Button
-        android:id="@+id/returnToLoginPageButtonPageButton"
+        android:id="@+id/returnToProfilePageButtonPageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/reEnteredPassword"
@@ -102,36 +152,8 @@
         android:textColor="@color/pastel_red"
         android:textSize="14sp" />
 
-    <EditText
-        android:id="@+id/newPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/passwordTitle"
-        android:background="@drawable/white_field"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:hint="Password"
-        android:textColorHint="@color/pastel_red"
-        android:drawablePadding="20dp"
-        android:minHeight="48dp"
-        android:padding="10dp"
-        android:fontFamily="@font/poppins"
-        android:textSize="16sp" />
 
-    <EditText
-        android:ems="10"
-        android:inputType="textPassword"
-        android:id="@+id/reEnteredPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/newPasswordTitle"
-        android:layout_alignParentStart="true"
-        android:hint="Password"
-        android:background="@drawable/white_field"
-        android:textColorHint="@color/pastel_red"
-        android:padding="10dp"
-        android:minHeight="48dp"
-        android:textSize="16sp"/>
+
 
 
 </RelativeLayout>
