--- a/app/src/main/res/layout/fragment_edit_goal_progress_page.xml
+++ b/app/src/main/res/layout/fragment_edit_goal_progress_page.xml
@@ -8,13 +8,13 @@
 
     <Button
         android:id="@+id/backToProfilePageButton"
-        android:layout_width="60dp"
+        android:layout_width="64dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="312dp"
+        android:layout_marginTop="6dp"
         android:layout_marginEnd="50dp"
         android:backgroundTint="@color/white"
         android:drawableLeft="@drawable/ic_baseline_black_arrow_back_24"
@@ -25,7 +25,6 @@
 
     <TextView
         android:id="@+id/updateProgressTitle"
-        android:layout_below="@id/backToProfilePageButton"
         android:layout_width="247dp"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
@@ -84,7 +83,7 @@
         />
 
     <Button
-        android:id="@+id/returnToProfilePageButton"
+        android:id="@+id/cancelToProfilePageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/currentWeight"
@@ -126,7 +125,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity"
+        tools:ignore="UnknownIdInLayout">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/floatingActionButton2"
