--- a/app/src/main/res/layout/fragment_home_page2.xml
+++ b/app/src/main/res/layout/fragment_home_page2.xml
@@ -69,8 +69,10 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/LatestRecipeImage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:clickable="true"
                     android:src="@drawable/asian_salmon">
 
                 </ImageView>
@@ -293,9 +295,10 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
-        android:layout_height="97dp"
+        android:layout_height="108dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
         android:foregroundGravity="bottom">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
