--- a/app/src/main/res/layout/fragment_admin_upload_recipe_page.xml
+++ b/app/src/main/res/layout/fragment_admin_upload_recipe_page.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
+<ScrollView xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fillViewport="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginStart="30dp"
@@ -90,52 +89,196 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
         android:text="Nutritional Values"
         android:textColor="@color/pastel_red"
         android:textSize="16sp" />
 
-    <Button
-        android:id="@+id/addNutritonsButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/nutritionalTitle"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
-        android:backgroundTint="@color/white"
-        android:fontFamily="@font/poppins_semibold"
-        android:text="ADD NUTRITIONAL VALUE"
-        android:textColor="@color/pastel_red"
-        android:textSize="12sp" />
-
-    <ListView
-        android:id="@+id/nutritional_listView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/addNutritonsButton" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:id="@+id/linearLayoutadmin3"
+        android:layout_below="@id/nutritionalTitle"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/caloriesText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/poppins_semibold"
+                android:text="Calories"
+                android:textSize="14sp" />
+
+            <EditText
+                android:id="@+id/calories"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="calories"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textColorHint="@color/pastel_red"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/CarboText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/poppins_semibold"
+                android:text="Carbohydrate"
+                android:textSize="14sp" />
+
+            <EditText
+                android:id="@+id/recipeCarbohydrate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="grams"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textColorHint="@color/pastel_red"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/fatText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/poppins_semibold"
+                android:text="Fat"
+                android:textSize="14sp" />
+
+            <EditText
+                android:id="@+id/recipeFat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="grams"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textColorHint="@color/pastel_red"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/proteinText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/poppins_semibold"
+                android:textSize="14sp"
+                android:text="Protein" />
+
+            <EditText
+                android:id="@+id/recipeProtein"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="grams"
+                android:textColorHint="@color/pastel_red"
+                android:textAlignment="center"
+                android:textSize="14sp"
+                android:ems="10"
+                android:inputType="number" />
+        </LinearLayout>
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/ingredientsTitle"
-        android:layout_below="@id/nutritional_listView"
+        android:layout_below="@id/linearLayoutadmin3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
         android:text="Recipe Ingredients"
         android:textColor="@color/pastel_red"
         android:textSize="16sp" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:id="@+id/linearLayoutAdmin4"
+        android:layout_below="@id/ingredientsTitle"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/recipeIngredient"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/poppins_semibold"
+                android:hint="Ingredient"
+                android:textSize="14sp" />
+
+            <EditText
+                android:id="@+id/ingredientQuantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="quantity"
+                android:inputType="number"
+                android:textAlignment="center"
+                android:textColorHint="@color/pastel_red"
+                android:textSize="14sp" />
+        </LinearLayout>
+    </LinearLayout>
+
     <Button
         android:id="@+id/addIngredientsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ingredientsTitle"
-        android:layout_marginTop="10dp"
+        android:layout_below="@id/linearLayoutAdmin4"
         android:layout_marginStart="10dp"
         android:backgroundTint="@color/white"
         android:fontFamily="@font/poppins_semibold"
@@ -143,43 +286,43 @@
         android:textColor="@color/pastel_red"
         android:textSize="12sp" />
 
-    <ListView
-        android:id="@+id/ingredients_listView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/addIngredientsButton" />
-
     <TextView
         android:id="@+id/stepsTitle"
-        android:layout_below="@id/ingredients_listView"
+        android:layout_below="@id/addIngredientsButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
         android:text="Recipe Steps"
         android:textColor="@color/pastel_red"
         android:textSize="16sp" />
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/recipeSteps"
+        android:layout_below="@id/stepsTitle"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:hint="Recipe steps"
+        android:textSize="14sp"
+        />
+
     <Button
         android:id="@+id/addStepsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/stepsTitle"
+        android:layout_below="@id/recipeSteps"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:backgroundTint="@color/white"
         android:fontFamily="@font/poppins_semibold"
         android:text="ADD STEPS"
         android:textColor="@color/pastel_red"
-        android:textSize="12sp" />
-
-    <ListView
-        android:id="@+id/steps_listView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/addStepsButton"
+        android:textSize="12sp"
         android:layout_marginBottom="50dp"/>
 
 
