--- a/app/src/main/res/layout/fragment_customer_support_page.xml
+++ b/app/src/main/res/layout/fragment_customer_support_page.xml
@@ -121,7 +121,7 @@
         android:layout_marginEnd="50dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
-        android:text="Contact Number"
+        android:text="Contact Number (X)"
         android:textSize="16sp" />
 
     <EditText
